# hybrid-mineral-circuit-optimizer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  README.zh-CN.md  my_local_test  test_suite  test_suite11  test_suite2
.github/workflows/: run_tests.yml
benchmarks/data/: ga_benchmark_runs.csv  ga_benchmark_summary.csv  ga_tuning_results.csv
benchmarks/variants/: Genetic_AlgorithmNaiveOPenMP.cpp  Genetic_Algorithmbaseline.cpp
docs/: BENCHMARKS.md  CONTRIBUTIONS.md
examples/: README.md
examples/mpi/: CMakeLists.txt  main.cpp
examples/openmp/: CMakeLists.txt  main.cpp
examples/plotting/: CMakeLists.txt  cplot.cpp
examples/rng/: CMakeLists.txt  basic_rand.cpp  fast_random1.cpp  fast_random2.cpp  race_random.cpp  slow_random.cpp
examples/rng/linux/: CMakeCache.txt  Makefile  basic_rand  cmake_install.cmake  fast_random1  fast_random2  race_random  slow_random
include/: CCircuit.h  CSimulator.h  CUnit.h  Circuit_Optimization_Problem.h  Economics.h  GATypedefs.h  Genetic_Algorithm.h  PRNG.h  RequiredFunctions.h
scripts/: benchmark_ga_variants.sh  plot_algo4_reliability.py  plot_algo4_report.py  plot_convergence.py  plot_ga_benchmark.py  run_algo4_reliability.sh  run_problem1_cx3.pbs  run_problem3_local.sh
src/: CCircuit.cpp  CMakeLists.txt  CSimulator.cpp  CUnit.cpp  Circuit_Optimization_Problem.cpp  Economics.cpp  Genetic_Algorithm.cpp  PRNG.cpp  Parameter_Tuning.cpp  Visualization.cpp  main.cpp  test_runner.cpp
tests/: CMakeLists.txt  post_processing_test.cpp  speed_checker.cpp
tests/data/: economics_reference.csv  test_graphs.txt
tests/ga_tests/: CMakeLists.txt  test_genetic_algorithm.cpp  test_mock_circuit.cpp  test_prng.cpp
tests/simulator_tests/: CMakeLists.txt  bench_economics.cpp  test_circuit_simulator.cpp  test_cunit.cpp  test_economics.cpp  test_new_simulator.cpp  test_simulator_wiring.cpp  test_tailings_product_routing.cpp  test_validity_checker.cpp
tools/: animate_circuit.py
